syntax = "proto3";

package pb;

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  string message = 1;
}